<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format3>
  <name>dog_fusion_control</name>
  <version>1.0.0</version>
  <description>基于语音与手势的多模态融合机器狗控制系统</description>
  <maintainer email="zpr@todo.todo">zpr</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
